# stepper-terminal

./: .gitignore  README.md
.github/workflows/: ci-build.yml
cli/: Cargo.toml
cli/src/: args.rs  main.rs  serial.rs
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: main.rs  num.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
scripts/: build.sh  clean.sh  update.sh  upgrades.sh
