[package]
name    = "stepper-terminal-cli"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"
publish = false


[dependencies]
anyhow     = "*"
clap       = "3.0.0-beta.2"
postcard   = "*"

[dependencies.protocol]
path = "../protocol"

# Disable libudev dependency, which is not required and not available on CI.
[dependencies.serialport]
version          = "*"
default-features = false
