[package]
name    = "stepper-terminal-firmware"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"


[dependencies]
cortex-m-rtic = "0.6.0-alpha.2"
fixed         = "*"
heapless      = "*"
postcard      = "*"
typenum       = "*"

[dependencies.lpc8xx-hal]
git      = "https://github.com/lpc-rs/lpc8xx-hal.git"
features = ["845m301jhi48", "845-rt"]

[dependencies.num-traits]
version          = "*"
default-features = false

[dependencies.panic-rtt-target]
version  = "*"
features = ["cortex-m"]

[dependencies.protocol]
path = "../protocol"

[dependencies.rtt-target]
version  = "*"
features = ["cortex-m"]

[dependencies.stepper]
git    = "https://github.com/flott-motion/stepper.git"
branch = "main"


# The additional optimization ends up being faster, due to the time saved
# flashing the firmware.
#
# Not sure why debug assertions need to be disabled, but with them enabled, the
# motion control code becomes too slow to handle moderate motor speeds.
[profile.dev]
opt-level = 3
debug-assertions = false
